# zinnia_flutter

./: LICENSE  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/zinnia_flutter/: ZinniaFlutterPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/zinnia_flutter_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: zinnia_flutter.podspec
ios/Classes/: SwiftZinniaFlutterPlugin.swift  ZinniaFlutterPlugin.h  ZinniaFlutterPlugin.m
lib/: zinnia_character.dart  zinnia_flutter.dart  zinnia_recognizer.dart  zinnia_result.dart  zinnia_result_entry.dart
